--- a/10.2.0/angular/src/app/users/edit-user/edit-user-dialog.component.html
+++ b/10.2.0/angular/src/app/users/edit-user/edit-user-dialog.component.html
@@ -65,7 +65,7 @@
             </div>
         </div>
 
-        <app-edit-doctor *ngIf="selectedRole === 'DOCTORS'" [doctorData]="doctorData"
+        <app-edit-doctor *ngIf="selectedRole === 'DOCTOR'" [doctorData]="doctorData"
             (doctorDataChange)="onDoctorDataChange($event)">
         </app-edit-doctor>
 
