create emrgency-case and triage module for emergency

--- a/10.2.0/angular/src/app/admission/admission.component.html
+++ b/10.2.0/angular/src/app/admission/admission.component.html
@@ -58,6 +58,9 @@
                                         Room
                                     </th>
                                     <th style="min-width: 130px">
+                                        Bed Number
+                                    </th>
+                                    <th style="min-width: 130px">
                                         Actions
                                     </th>
                                 </tr>
@@ -89,6 +92,11 @@
                                     <td>
                                         <span>
                                         {{ record.roomNumber }}-{{ record.roomTypeName }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span>
+                                        {{ record.bedNumber }}
                                         </span>
                                     </td>
                                     <td  *ngIf="record.status !== 3">
