--- a/10.2.0/angular/src/app/admission/create-addmission/create-addmission.component.html
+++ b/10.2.0/angular/src/app/admission/create-addmission/create-addmission.component.html
@@ -22,23 +22,32 @@
         </div>
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
-                <label>Admission Date & Time</label>
-                <p-datepicker [(ngModel)]="admission.admissionDateTime" name="admissionDateTime" [showIcon]="true"
-                    placeholder="Select admission date & time" showTime="true" class="w-100" required />
-            </div>
-            <div class="col-md-6 d-flex flex-column">
                 <label>Select Room</label>
                 <p-select [(ngModel)]="admission.roomId" [optionValue]="'value'" name="roomId" [options]="roomOptions"
-                    optionLabel="label" placeholder="Select room" class="w-100" required />
+                    optionLabel="label" placeholder="Select room" [filter]="true" class="w-100" required
+                    (onChange)="onRoomChange($event.value)">
+                </p-select>
+
+            </div>
+            <div class="col-md-6 d-flex flex-column">
+                <label>Select Bed</label>
+                <p-select [(ngModel)]="admission.bedId" name="bedId" [filter]="true" [options]="beds" optionLabel="bedNumber"
+                    optionValue="id" placeholder="Select bed" class="w-100" required>
+                </p-select>
             </div>
         </div>
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
                 <label>Admission Type</label>
                 <p-select [(ngModel)]="admission.admissionType" name="admissionType" [options]="admissionTypeOptions"
-                    optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100" required />
+                    optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100"
+                    required />
             </div>
-            
+            <div class="col-md-6 d-flex flex-column">
+                <label>Admission Date & Time</label>
+                <p-datepicker [(ngModel)]="admission.admissionDateTime" name="admissionDateTime" [showIcon]="true"
+                    placeholder="Select admission date & time" showTime="true" required />
+            </div>
         </div>
     </div>
     <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!createAdmissionForm.form.valid || saving"
