--- a/10.2.0/angular/src/app/admission/edit-addmission/edit-addmission.component.html
+++ b/10.2.0/angular/src/app/admission/edit-addmission/edit-addmission.component.html
@@ -22,15 +22,17 @@
         </div>
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
-                <label>Admission Date & Time</label>
-                <p-datepicker [(ngModel)]="admission.admissionDateTime" name="admissionDateTime" [showIcon]="true"
-                    placeholder="Select admission date & time" showTime="true" class="w-100" required />
-            </div>
-            <div class="col-md-6 d-flex flex-column">
                 <label>Select Room</label>
-                <p-select [(ngModel)]="admission.roomId" [optionValue]="'value'" name="roomId" [options]="roomOptions"
-                    optionLabel="label" placeholder="Select room" class="w-100" required />
+                 <p-select [(ngModel)]="admission.roomId" [optionValue]="'value'" [filter]="true" name="roomId" [options]="roomOptions"
+            optionLabel="label" placeholder="Select room" class="w-100" required
+            (onChange)="onRoomChange($event.value)" />
             </div>
+<div class="col-md-6 d-flex flex-column">
+        <label>Select Bed</label>
+        <p-select [(ngModel)]="admission.bedId" name="bedId" [options]="beds"[filter]="true" optionLabel="bedNumber"
+            optionValue="id" placeholder="Select bed" class="w-100">
+        </p-select>
+    </div>
         </div>
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
@@ -38,7 +40,11 @@
                 <p-select [(ngModel)]="admission.admissionType" name="admissionType" [options]="admissionTypeOptions"
                     optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100" required />
             </div>
-            
+            <div class="col-md-6 d-flex flex-column">
+                <label>Admission Date & Time</label>
+                <p-datepicker [(ngModel)]="admission.admissionDateTime" name="admissionDateTime" [showIcon]="true"
+                    placeholder="Select admission date & time"  required />
+            </div>
         </div>
     </div>
     <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!editAdmissionForm.form.valid || saving"
