--- a/10.2.0/angular/src/app/deposit/create-deposit/create-deposit.component.css
+++ b/10.2.0/angular/src/app/deposit/create-deposit/create-deposit.component.css
@@ -1,3 +1,21 @@
 ::ng-deep .p-datepicker{
     width: 100% !important;
 }
+.payment-option {
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    cursor: pointer;
+    user-select: none;
+    background-color: #f8f9fa;
+    font-weight: 500;
+    text-align: center;
+    flex: 1;
+    transition: background-color 0.2s, border-color 0.2s;
+  }
+  
+  .payment-option.active {
+    background-color: #0d6efd;
+    color: white;
+    border-color: #0d6efd;
+  }
