--- a/10.2.0/angular/src/app/deposit/deposit.component.html
+++ b/10.2.0/angular/src/app/deposit/deposit.component.html
@@ -1,115 +1,115 @@
 <div [@routerTransition]>
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>Deposit</h1>
-                </div>
-                <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createDeposit()">
-                        <i class="fa fa-plus-square"></i>
-                        {{ 'Create' | localize }}
-                    </a>
-                </div>
-            </div>
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-6">
+          <h1>Deposit</h1>
         </div>
-    </section>
-    <section class="content px-2 pb-3">
-        <div class="container-fluid">
-            <div class="card table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control" name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <div class="primeng-datatable-container">
-                        <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th>Patient</th>
-                                    <th>Amount</th>
-                                    <th>Payment Method</th>
-                                    <th>Date & Time</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </ng-template>
-                            <ng-template pTemplate="body" let-record="$implicit">
-                                <tr>
-                                    <td>
-                                        <span>
-                                            {{ record.patientName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.amount}}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ getPaymentMethodLabel(record.paymentMethod) }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.depositDateTime | date: 'dd/MM/yyyy hh:mm a' }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <!-- <button type="button" pButton icon="pi pi-pencil" class="p-button-text"
-                                            (click)="editDeposit(record)">
-                                        </button> -->
-                                        <button type="button" pButton icon="pi pi-trash" class="p-button-text"
-                                            (click)="delete(record)">
-                                        </button>
-                                    </td>
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                            {{ 'NoData' | localize }}
-                        </div>
-                        <div class="ui-table-footer"></div>
-                    </div>
-                </div>
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
-                                            'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
-                                        "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="col-6 text-right">
+          <a href="javascript:;" class="btn bg-blue" (click)="createDeposit()">
+            <i class="fa fa-plus-square"></i>
+            {{ 'Create' | localize }}
+          </a>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
+
+  <section class="content px-2 pb-3">
+    <div class="container-fluid">
+      <div class="card table-wrapper">
+        <div class="card-header">
+          <div class="row">
+            <div class="col-md-6">&emsp;</div>
+            <div class="col-md-6">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <button type="button" class="btn bg-blue" (click)="list()">
+                    <i class="fas fa-search"></i>
+                  </button>
+                </div>
+                <input type="text" class="form-control" name="keyword"
+                       [placeholder]="'SearchWithThreeDot' | localize"
+                       [(ngModel)]="keyword"
+                       (keyup.enter)="list()" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-body table-responsive table-striped table-bordered">
+          <div class="primeng-datatable-container">
+            <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+                     rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
+                     [paginator]="false" [lazy]="true"
+                     [tableStyle]="{ 'min-width': '50rem' }"
+                     (onLazyLoad)="list($event)">
+
+              <ng-template pTemplate="header">
+                <tr>
+                  <th>Patient</th>
+                  <th>Total Credit Amount</th>
+                  <th>Total Debit Amount</th>
+                  <th>Total Balance</th>
+                  <th>Actions</th>
+                </tr>
+              </ng-template>
+
+              <ng-template pTemplate="body" let-record="$implicit">
+                <tr>
+                  <td>{{ record.patientName }}</td>
+                  <td>{{ record.totalCreditAmount }}</td>
+                  <td>{{ record.totalDebitAmount }}</td>
+                  <td>{{ record.totalBalance }}</td>
+                  <td>
+                    <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
+                            (click)="rowMenu.toggle($event); selectedRecord = record">
+                    </button>
+                    <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
+                      <ul class="custom-overlay-menu">
+                        <li (click)="collectDeposit(selectedRecord)">
+                          <i class="pi pi-plus-circle"></i> Collect Deposit
+                        </li>
+                        <li (click)="viewReceipts(selectedRecord)">
+                          <i class="pi pi-file"></i> View Deposit Receipts
+                        </li>
+                      </ul>
+                    </p-overlayPanel>
+                  </td>
+                </tr>
+              </ng-template>
+            </p-table>
+
+            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+              {{ 'NoData' | localize }}
+            </div>
+          </div>
+        </div>
+
+        <div class="card-footer table-card-footer bg-white border-top">
+          <div class="row">
+            <div class="col-sm-4 col-12 text-sm-left text-center">
+              <button class="btn btn-secondary" (click)="refresh()">
+                <i class="fas fa-redo-alt"></i>
+              </button>
+            </div>
+            <div class="col-sm-8 col-12">
+              <div class="float-sm-right m-auto">
+                <div class="primeng-paging-container">
+                  <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                               (onPageChange)="list($event)"
+                               [totalRecords]="primengTableHelper.totalRecordsCount"
+                               [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                               [showCurrentPageReport]="true"
+                               [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+                  </p-paginator>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
 </div>
