--- a/10.2.0/angular/src/app/admission/create-addmission/create-addmission.component.html
+++ b/10.2.0/angular/src/app/admission/create-addmission/create-addmission.component.html
@@ -5,19 +5,19 @@
             <div class="col-md-12">
                 <label><b>Select Patient</b></label>
                 <p-select [options]="patients" optionLabel="fullName" placeholder="Select a patient"
-                    [optionValue]="'id'" [(ngModel)]="admission.patientId" name="patientId" class="w-100" required />
+                    [optionValue]="'id'" [(ngModel)]="admission.patientId" [disabled]="disableRoleSelection" name="patientId" class="w-100" required />
             </div>
         </div>
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Doctor</label>
                 <p-select [(ngModel)]="admission.doctorId" [optionValue]="'id'" name="doctorId" [options]="doctors"
-                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required />
+                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required [disabled]="disableRoleSelection"/>
             </div>
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Nurse</label>
                 <p-select [(ngModel)]="admission.nurseId" [optionValue]="'id'" name="nurseId" [options]="nurses"
-                    optionLabel="fullName" placeholder="Select nurse" class="w-100" />
+                    optionLabel="fullName" placeholder="Select nurse" class="w-100" [disabled]="disableRoleSelection"/>
             </div>
         </div>
         <div class="row mt-3">
@@ -40,8 +40,7 @@
             <div class="col-md-6 d-flex flex-column">
                 <label>Admission Type</label>
                 <p-select [(ngModel)]="admission.admissionType" name="admissionType" [options]="admissionTypeOptions"
-                    optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100"
-                    required />
+                    optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100" required />
             </div>
             <div class="col-md-6 d-flex flex-column">
                 <label>Admission Date & Time</label>
