--- a/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
+++ b/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
@@ -98,6 +98,15 @@
                             [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
                             <ng-template pTemplate="header">
                                 <tr>
+                                    <th style="min-width: 150px">
+                                        {{ 'Invoice Number' | localize }}
+                                    </th>
+                                     <th style="min-width: 150px">
+                                        {{ 'Invoice Type' | localize }}
+                                    </th>
+                                     <th style="min-width: 150px">
+                                        {{ 'Invoice Date' | localize }}
+                                    </th>
                                     <th style="min-width: 100px" pSortableColumn="patientName">
                                         {{ 'PatientName' | localize }}
                                         <p-sortIcon field="patientName"></p-sortIcon>
@@ -106,14 +115,8 @@
                                         {{ 'TotalAmount' | localize }}
                                         <p-sortIcon field="totalAmount"></p-sortIcon>
                                     </th>
-                                    <th style="min-width: 150px">
-                                        {{ 'RemainingAmount' | localize }}
-                                    </th>
                                     <th style="min-width: 150px" >
                                         {{ 'PaymentStatus' | localize }}
-                                    </th>
-                                    <th style="min-width: 30px" >
-                                        {{ 'PaymentMethod' | localize }}
                                     </th>
                                     <th style="min-width: 130px">
                                         {{ 'Actions' | localize }}
@@ -123,6 +126,21 @@
 
                             <ng-template pTemplate="body" let-record="$implicit">
                                 <tr>
+                                    <td>
+                                        <span>
+                                            {{ record.invoiceNo }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span>
+                                            {{ record.invoiceType==0?'Daily Invoice':'Full Invoice' }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span>
+                                            {{ record.invoiceDate | date: 'dd/MM/yyyy' }}
+                                        </span>
+                                    </td>
                                     <td>
                                         <span>
                                             {{ record.patientName }}
@@ -135,17 +153,7 @@
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.totalAmount-record.amountPaid }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
                                             {{ getStatusString(record.status) }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ getPaymentMethodString(record.paymentMethod) }}
                                         </span>
                                     </td>
                                     <td>
